# rusty-chat

./: .dockerignore  .env.example  .gitignore  .rules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatLayout.tsx  ChatSidebar.tsx  ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/common/: FileUpload.tsx
frontend/src/components/friends/: FriendsList.tsx
frontend/src/components/groups/: CreateGroupModal.tsx  GroupDetailsModal.tsx  GroupsList.tsx
frontend/src/components/settings/: AccountSettings.tsx  LanguageSettings.tsx  NotificationSettings.tsx  PrivacySettings.tsx  ProfileSettings.tsx  (+2 more)
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx  SettingsContext.tsx
frontend/src/i18n/: index.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SettingsTestPage.tsx  TestPage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
migrations/: 001_initial.sql
scripts/: build.sh  dev.sh  setup_db.sh  test_connection.sh
src/: config.rs  database.rs  main.rs  websocket.rs
src/handlers/: auth.rs  files.rs  friends.rs  groups.rs  messages.rs  mod.rs  users.rs
src/models/: file.rs  friend.rs  group.rs  message.rs  mod.rs  user.rs
src/services/: auth.rs  file.rs  friend.rs  group.rs  message.rs  mod.rs  user.rs  websocket.rs
